fixed the benefits section to align with content section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,25 +76,25 @@ p {
     padding: 20px;
     margin-bottom: 1em;
     width: 20%;
-    height: 100%;
+    height: 940px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    /* background-size: cover; */
     color: #ffffff;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
-    margin-bottom: 1em;
+.benefit-lead, .benefit-brand {
+    margin-bottom: 1.9em;
 }
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
-    margin: 1em auto;
+    margin: 0 auto;
     max-width: 70%;
 }
 
 h3 {
     text-align: center;
+    margin-top: .5em;
 }
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
@@ -117,7 +117,7 @@ h3 {
 }
 
 .footer {
-    padding: 30px;
+    padding: 0 1em 1em 1em;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
